--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - ./backend/.env
     depends_on:
       - db
+    networks:
+      - app-network
 
   frontend:
     build: ./frontend
