--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,38 @@
-__pycache__
-*.pyc
-.DS_Store 
-backend/.env
+# Python ignores
+**/__pycache__/
+**/*.pyc
+
+# Backend specific ignores
+**/venv/
+**/.env
+
+# Node dependencies
+**/node_modules/
+**/.pnp
+**/.pnp.js
+
+# Testing
+**/coverage
+
+# Production
+**/build
+
+# Misc
+**/.DS_Store
+
+# Frontend environment files
+**/.env.local
+**/.env.development.local
+**/.env.test.local
+**/.env.production.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Lock files
+**/package-lock.json
+
+# Git ignores
+.git
