Removed personal API key

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 # add your API_KEY generate from https://aistudio.google.com/app/apikey 
-API_KEY="AIzaSyCsWikYJVkEdoTFlmjZzdCsd30N1bdFxBE"
+API_KEY=
